--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,3 +42,33 @@ body {
   font-size: 24px;
   line-height: 1.2;
 }
+
+
+.shimmer {
+  @apply relative overflow-hidden;
+}
+
+.shimmer::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    to right,
+    transparent,
+    rgba(255, 255, 255, 0.3),
+    transparent
+  );
+  animation: shimmer 1.5s infinite;
+}
+
+@keyframes shimmer {
+  0% {
+    left: -100%;
+  }
+  100% {
+    left: 100%;
+  }
+}
